added a gossamer clock!

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <button id = theBadButton> The Bad. </button>
     <button id = rickRoll> The Unexpected! </button>
   </div>
+	<canvas id="ephemeralClock" width="700" height="400"
+	style="background-color:clear">
+	</canvas>
+
+
 <br>
 
 <div id = "slogan">Welcome to Andrea's Sandbox</div>
