where is my clock?

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button id = rickRoll> The Unexpected! </button>
   </div>
 	<canvas id="ephemeralClock" width="700" height="400"
-	style="background-color:clear">
+	style="background-color:black">
 	</canvas>
 
 
