--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-
+	<canvas id="ephemeralClock" width="700" height="400"
+	style="background-color:clear">
+	</canvas>
+	
 <div style="overflow:auto">
   <div class="sideNav">
 
@@ -16,9 +19,6 @@
     <button id = theBadButton> The Bad. </button>
     <button id = rickRoll> The Unexpected! </button>
   </div>
-	<canvas id="ephemeralClock" width="700" height="400"
-	style="background-color:black">
-	</canvas>
 
 
 <br>
