--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>Andrea's Sandbox</title>
 </head>
 <body>
+	<div class="header">
 
 	<canvas id="ephemeralClock" width="500" height="400"
 	style="background-color: clear">
@@ -20,6 +21,10 @@
     <button id = rickRoll> The Unexpected! </button>
   </div>
 <div id = "slogan">Welcome to Andrea's Sandbox</div>
+</div>
+</div>
+
+
 <br>
 <br>
 <br>
