--- a/index.html
+++ b/index.html
@@ -8,44 +8,33 @@
 </head>
 <body>
 
-
-
 	<div class="header">
-		<canvas id="ephemeralClock" width="500" height="400"
-		style="background-color: clear">
-		</canvas>
-		<div id = "slogan">Welcome to Andrea's Sandbox</div>
-		</div>
-
-
-
-
-
-
-<br>
-<br>
-<br>
+	  <h1>My Website</h1>
+	  <p>A website created by me.</p>
+	</div>
+	
+	<div class="navbar">
+	  <a href="#">Link</a>
+	  <a href="#">Link</a>
+	  <a href="#">Link</a>
+	  <a href="#" class="right">Link</a>
+	</div>
 
 	<div class="row">
-
-
-		<div class="sideNav">
-
-	    <button id = theGoodButton> The Good. </button>
-	    <button id = theBadButton> The Bad. </button>
-	    <button id = rickRoll> The Unexpected! </button>
-	  </div>
-		
 	  <div class="side">
-	   HELLOO TO MY WEBSITE. I HAVE NO IDEO WHAT I M FOIDNGG
+	    <h2>About Me</h2>
+	    <h5>Photo of me:</h5>
 	    <div class="fakeimg" style="height:200px;">Image</div>
-	  helllllloooo
+	    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+	    <h3>More Text</h3>
+	    <p>Lorem ipsum dolor sit ame.</p>
 	    <div class="fakeimg" style="height:60px;">Image</div><br>
-
+	    <div class="fakeimg" style="height:60px;">Image</div><br>
+	    <div class="fakeimg" style="height:60px;">Image</div>
 	  </div>
 	  <div class="main">
-	    <h2>HER IS MAIN TITLE</h2>
-	    <h5>Title description, Dec 7, 20777</h5>
+	    <h2>TITLE HEADING</h2>
+	    <h5>Title description, Dec 7, 2017</h5>
 	    <div class="fakeimg" style="height:200px;">Image</div>
 	    <p>Some text..</p>
 	    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
@@ -61,7 +50,6 @@
 	<div class="footer">
 	  <h2>Footer</h2>
 	</div>
-<br>
 
 </body>
 
