--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 	  <h1>My Website</h1>
 	  <p>A website created by me.</p>
 	</div>
-	
+
 	<div class="navbar">
-	  <a href="#">Link</a>
-	  <a href="#">Link</a>
-	  <a href="#">Link</a>
-	  <a href="#" class="right">Link</a>
+
+ 	     <button id = theGoodButton> The Good. </button>
+ 	     <button id = theBadButton> The Bad. </button>
+ 	     <button id = rickRoll> The Unexpected! </button>
+	
 	</div>
 
 	<div class="row">
