--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 
 	<div class="header">
-	  <h1>My Website</h1>
-	  <p>A website created by me.</p>
+		<canvas id="ephemeralClock" width="400" height="600"
+ style="background-color:#333">
+ </canvas>
 	</div>
 
 	<div class="navbar">
@@ -18,7 +19,7 @@
  	     <button id = theGoodButton> The Good. </button>
  	     <button id = theBadButton> The Bad. </button>
  	     <button id = rickRoll> The Unexpected! </button>
-	
+
 	</div>
 
 	<div class="row">
