--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<div class="header">
 		<canvas id="ephemeralClock" width="400" height="600"
- style="background-color:#333">
+ style="background-color:clear">
  </canvas>
 	</div>
 
