--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 style="background-color:clear">
 </canvas>
 	<div class="header">
-
+		<div id = "slogan">Andrea's Sandbox</div>
 	</div>
 
 	<div class="navbar">
