--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@ style="background-color:clear">
 	</div>
 
 	<div class="navbar">
-
- 	     <button id = theGoodButton> The Good. </button>
- 	     <button id = theBadButton> The Bad. </button>
- 	     <button id = rickRoll> The Unexpected! </button>
-
+		<a href="#">The Good</a>
+		  <a href="#">The Bad</a>
+		  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">The Unexpected</a>
 	</div>
 <br>
 <br>
