--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 	<div id = "slogan">Andrea's Sandbox</div>
+	<br>
+
 	<canvas id="ephemeralClock" width="700" height="700"
 style="background-color:clear">
 </canvas>
@@ -18,11 +20,10 @@ style="background-color:clear">
 <br>
 
 	<div class="navbar">
-		<a href="#">The Good</a>
-		  <a href="#">The Bad</a>
+		<a href="www.reddit.com">The Good</a>
+		  <a href="www.google.com">The Bad</a>
 		  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">The Unexpected</a>
 	</div>
-<br>
 <br>
 <br>
 <br>
