--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ style="background-color:clear">
 <br>
 <br>
 <br>
-	<div class="row">
-	  <div class="side">
+	<div id = "row" class="row">
+	  <div id = "side" class="side">
 	    <h2>About Me</h2>
 	    <h5>Photo of me:</h5>
 	    <div class="fakeimg" style="height:200px;">Image</div>
