--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ style="background-color:clear">
 	    <div class="fakeimg" style="height:60px;">Image</div><br>
 	    <div class="fakeimg" style="height:60px;">Image</div>
 	  </div>
-	  <div class="main">
+	  <div id = "main" class="main">
 	    <h2>TITLE HEADING</h2>
 	    <h5>Title description, Dec 7, 2017</h5>
 	    <div class="fakeimg" style="height:200px;">Image</div>
