--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ style="background-color:clear">
 <br>
 <br>
 <br>
-	<div id = "row" class="row">
-	  <div id = "side" class="side">
+	<div  class="row">
+	  <div  class="side">
 	    <h2>About Me</h2>
 	    <h5>Photo of me:</h5>
 	    <div class="fakeimg" style="height:200px;">Image</div>
@@ -36,7 +36,7 @@ style="background-color:clear">
 	    <div class="fakeimg" style="height:60px;">Image</div><br>
 	    <div class="fakeimg" style="height:60px;">Image</div>
 	  </div>
-	  <div id = "main" class="main">
+	  <div class="main">
 	    <h2>TITLE HEADING</h2>
 	    <h5>Title description, Dec 7, 2017</h5>
 	    <div class="fakeimg" style="height:200px;">Image</div>
