--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ style="background-color:clear">
 	</div>
 
 	<div class="footer">
-	  <h2>Footer</h2>
+  <h2>Thanks for looking!</h2>
 	</div>
 
 </body>
