--- a/index.html
+++ b/index.html
@@ -22,30 +22,24 @@ style="background-color:clear">
 	</div>
 <br>
 
-	<div  class="row">
-	  <div  class="side">
-	    <h2>About Me</h2>
-	    <h5>Photo of me:</h5>
+	<div class="row">
+	  <div class="side">
+	    <h2>Hello, hello!</h2>
+	    <h5>Andrea Miles</h5>
 	    <div class="fakeimg" style="height:200px;">Image</div>
-	    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-	    <h3>More Text</h3>
-	    <p>Lorem ipsum dolor sit ame.</p>
+	    <p>I like jalapeno chips.</p>
+	    <h4>Learning new programming concepts</h4>
+	    <p>And getting a full eight hours of sleep.</p>
 	    <div class="fakeimg" style="height:60px;">Image</div><br>
 	    <div class="fakeimg" style="height:60px;">Image</div><br>
-	    <div class="fakeimg" style="height:60px;">Image</div>
 	  </div>
 	  <div class="main">
-	    <h2>TITLE HEADING</h2>
-	    <h5>Title description, Dec 7, 2017</h5>
+	    <h2>Miles and Miles and miles of smiles</h2>
+	    <h5>Born December 1st, 1991</h5>
 	    <div class="fakeimg" style="height:200px;">Image</div>
-	    <p>Some text..</p>
-	    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+	    <p>I'm blue and I'm an ameeeoba and I. like ameoba and ties.</p>
+	    <p>lkjsadfasljfsdklajflkjasdlkfj lkjakfjalfkdjslkfjaskjfklsafkjaslkfj.</p>
 	    <br>
-	    <h2>TITLE HEADING</h2>
-	    <h5>Title description, Sep 2, 2017</h5>
-	    <div class="fakeimg" style="height:200px;">Image</div>
-	    <p>Some text..</p>
-	    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 	  </div>
 	</div>
 
