--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<br>
 
 	<canvas id="ephemeralClock" width="600" height="700"
-style="background-color:clear">
+style="background-color:white">
 </canvas>
 <br>
 
