--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@ style="background-color:white">
 	  <div class="side">
 	    <h2>Hello, hello!</h2>
 	    <h5>Andrea Miles</h5>
-	    <div class="fakeimg" style="height:200px;">Image</div>
+	    <div class="img" id="Me" style="height:200px;">Image</div>
 	    <p>I like jalapeno chips.</p>
 	    <h4>Learning new programming concepts</h4>
 	    <p>And getting a full eight hours of sleep.</p>
-	    <div class="fakeimg" style="height:60px;">Image</div><br>
-	    <div class="fakeimg" style="height:60px;">Image</div><br>
+	    <div class="img" id="Layla" style="height:60px;">Image</div><br>
+
 	  </div>
 	  <div class="main">
 	    <h2>Miles and Miles and miles of smiles</h2>
 	    <h5>Born December 1st, 1991</h5>
-	    <div class="fakeimg" style="height:200px;">Image</div>
+	   	<div class="img" id = "Tytoona" style="height:600px;">Image</div><br>
 	    <p>I'm blue and I'm an ameeeoba and I. like ameoba and ties.</p>
 	    <p>lkjsadfasljfsdklajflkjasdlkfj lkjakfjalfkdjslkfjaskjfklsafkjaslkfj.</p>
 	    <br>
