--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ style="background-color:white">
 	  <div class="side">
 	    <h2>Hello, hello!</h2>
 	    <h5>Andrea Miles</h5>
-	    <div class="img" src="Me.jpg" style="height:200px; width: 100px">Image</div>
+	    <div class="img" id= "Me" src="Me.jpg" style="height:200px; width: 100px">Image</div>
 	    <p>I like jalapeno chips.</p>
 	    <h4>Learning new programming concepts</h4>
 	    <p>And getting a full eight hours of sleep.</p>
