--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ style="background-color:white">
 	  <div class="main">
 	    <h2>Miles and Miles and miles of smiles</h2>
 	    <h5>Born December 1st, 1991</h5>
-	   	<div class="img" id = "Tytoona" src="TytoonWalkWay".jpg style="height:600px;">Image</div><br>
+	   	<div class="img" id = "Tytoona" src=".git/TytoonWalkWay".jpg style="height:600px;">Image</div><br>
 	    <p>I'm blue and I'm an ameeeoba and I. like ameoba and ties.</p>
 	    <p>lkjsadfasljfsdklajflkjasdlkfj lkjakfjalfkdjslkfjaskjfklsafkjaslkfj.</p>
 	    <br>
