--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ style="background-color:white">
 	    <p>I like jalapeno chips.</p>
 	    <h4>Learning new programming concepts</h4>
 	    <p>And getting a full eight hours of sleep.</p>
-	    <div class="img" id="Layla" src="Layla.jpg" style="height:60px; width: 80px">Image</div><br>
+	    <div class="img" id="Layla" src="github\ASandboxForAndrea.github.io\Layla.jpg" style="height:60px; width: 80px">Image</div><br>
 
 	  </div>
 	  <div class="main">
