--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@ style="background-color:white">
 	  <div class="side">
 	    <h2>Hello, hello!</h2>
 	    <h5>Andrea Miles</h5>
-	    <div class="img" id= "Me" src="Me.jpg" style="height:200px; width: 100px">Image</div>
+	    <div class="img" id= "Me" src="Me.jpg" style="height:200px; width: 100px"></div>
 	    <p>I like jalapeno chips.</p>
 	    <h4>Learning new programming concepts</h4>
 	    <p>And getting a full eight hours of sleep.</p>
-	    <div class="img" id="Layla" src="ASandboxForAndrea.github.io\Layla.jpg" style="height:100px; width: 80px">Image</div><br>
+	    <div class="img" src="ASandboxForAndrea.github.io\Layla.jpg" style="height:100px; width: 80px"></div><br>
 
 	  </div>
 	  <div class="main">
 	    <h2>Miles and Miles and miles of smiles</h2>
 	    <h5>Born December 1st, 1991</h5>
-	   	<div class="img" id = "Tytoona" src=".git/TytoonWalkWay".jpg style="height:600px;">Image</div><br>
+	   	<div class="img" id = "Tytoona" src=".git/TytoonWalkWay".jpg style="height:600px;"></div><br>
 	    <p>I'm blue and I'm an ameeeoba and I. like ameoba and ties.</p>
 	    <p>lkjsadfasljfsdklajflkjasdlkfj lkjakfjalfkdjslkfjaskjfklsafkjaslkfj.</p>
 	    <br>
