--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@ style="background-color:white">
 	    <p>I like jalapeno chips.</p>
 	    <h4>Learning new programming concepts</h4>
 	    <p>And getting a full eight hours of sleep.</p>
-	    <div class="img" src="ASandboxForAndrea.github.io\Layla.jpg" style="height:100px; width: 80px"></div><br>
-
+			<img src="ASandboxForAndrea.github.io\Layla.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
 	  </div>
 	  <div class="main">
 	    <h2>Miles and Miles and miles of smiles</h2>
