--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ style="background-color:white">
 	  <div class="side">
 	    <h2>Hello, hello!</h2>
 	    <h5>Andrea Miles</h5>
-	    <div class="img" id= "Me" src="Me.jpg" style="height:200px; width: 100px"></div>
+	    <img src="\Layla.jpg" alt="Layla" style="width:128px;height:128px;"></img>
 	    <p>I like jalapeno chips.</p>
 	    <h4>Learning new programming concepts</h4>
 	    <p>And getting a full eight hours of sleep.</p>
-			<img src="ASandboxForAndrea.github.io\Layla.jpg" alt="HTML5 Icon" style="width:128px;height:128px;">
+			<img src="\Layla.jpg" alt="Layla" style="width:128px;height:128px;"></img>
 	  </div>
 	  <div class="main">
 	    <h2>Miles and Miles and miles of smiles</h2>
