--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ style="background-color:white">
 	  <div class="side">
 	    <h2>Hello, hello!</h2>
 	    <h5>Andrea Miles</h5>
-	    <img src="Me.jpg" alt="Me" style="width:300px;height:350px;"></img>
+	    <img src="Me.jpg" alt="Me" style="width:300px;height:350px;" opacity = 1.0></img>
 	    <p>I like jalapeno chips.</p>
 	    <h4>Learning new programming concepts</h4>
 	    <p>And getting a full eight hours of sleep.</p>
