--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@ style="background-color:white">
 	  <div class="side">
 	    <h2>Hello, hello!</h2>
 	    <h5>Andrea Miles</h5>
-	    <img src="Me.jpg" alt="Me" style="width:300px;height:350px;" opacity = 1.0></img>
+	    <img src="Me.jpg" alt="Me" style="width:300px;height:350px;" opacity = 1.5></img>
 	    <p>I like jalapeno chips.</p>
 	    <h4>Learning new programming concepts</h4>
 	    <p>And getting a full eight hours of sleep.</p>
-			<img src="Layla.jpg" alt="Layla" style="width:300px;height:350px;"></img>
+			<img src="Layla.jpg" alt="Layla" style="width:300px;height:350px;"  opacity = 1.5></img>
 	  </div>
 	  <div class="main">
 	    <h2>Miles and Miles and miles of smiles</h2>
 	    <h5>Born December 1st, 1991</h5>
-	   	<img src="TytoonaWalkWay.jpg" style="height:400px;"></img><br>
+	   	<img src="TytoonaWalkWay.jpg" style="height:400px;"  opacity = 1.5></img><br>
 	    <p>I'm blue and I'm an ameeeoba and I. like ameoba and ties.</p>
 	    <p>lkjsadfasljfsdklajflkjasdlkfj lkjakfjalfkdjslkfjaskjfklsafkjaslkfj.</p>
 	    <br>
