trying border radius inside div class tag

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ style="background-color:white">
 <br>
 <br>
 	<div class="row">
-	  <div class="side">
+	  <div class="side" border-radius = 25px;>
 	    <h2>Hello, hello!</h2>
 	    <h5>Andrea Miles</h5>
 	    <img src="Me.jpg" alt="Me" style="width:300px;height:350px;"></img>
