--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ style="background-color:white">
 	</div>
 <br>
 <br>
-	<div class="row">
-	  <div class="side" border-radius = 25px;>
+	<div class="mainContainer">
+	  <div class="left" border-radius = 25px;>
 	    <h2>Hello, hello!</h2>
 	    <h5>Andrea Miles</h5>
 	    <img src="Me.jpg" alt="Me" style="width:300px;height:350px;"></img>
@@ -32,7 +32,7 @@ style="background-color:white">
 	    <p>And getting a full eight hours of sleep.</p>
 			<img src="Layla.jpg" alt="Layla" style="width:300px;height:350px;"></img>
 	  </div>
-	  <div class="main">
+	  <div class="right">
 	    <h2>Miles and Miles and miles of smiles</h2>
 	    <h5>Born December 1st, 1991</h5>
 	   	<img src="TytoonaWalkWay.jpg" style="height:400px;"></img><br>
