removed mouseover effects

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ style="background-color:white">
 	</div>
 <br>
 <br>
-	<div  id="mainBox">
+	<div id="mainBox">
 	  <div class="leftColumn" >
 	    <h2>Hello, hello!</h2>
-			<section onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)">
+			<section >
 			<h3>My First Website</h3>
 			<p>
 			 This is my first real website. I had a lot of difficulties with making
