--- a/index.html
+++ b/index.html
@@ -8,63 +8,64 @@
 <title>Andrea's Sandbox</title>
 </head>
 <body>
-	<div id = "slogan">Andrea's Sandbox</div>
-	<br>
+    <div id="slogan">Andrea's Sandbox</div>
+    <br>
 
-	<canvas id="ephemeralClock" width="600" height="700"
-style="background-color:white">
-</canvas>
-<br>
+    <canvas id="ephemeralClock" width="600" height="700"
+            style="background-color:white"></canvas>
+    <br>
 
-	<div class="navbar">
-		<a href="www.reddit.com"> TheGood </a>
-		  <a href="www.google.com"> TheBad </a>
-		  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> TheUnexpected </a>
-	</div>
-<br>
-<br>
-	<div id="mainBox">
-	  <div class="leftColumn" >
-	    <h2>Hello, hello!</h2>
-			<section >
-			<h3>My First Website</h3>
-			<p>
-			 This is my first real website. I had a lot of difficulties with making
-			 it match up with the landscape in my head. I'm currently learning HTML5,
-			 CSS, and JavaScript along with some web frameworks like Node.js as an
-			 intern at AirSpeed Academy. I hope this website will showcase some of
-			 the skills I've acquired during the summer. This website follows the
-			 recommended standards of Html5.
-		 </p>
-			</section>
+    <div class="navbar">
+        <a href="#"> TheGood </a>
+        <a href="#"> TheBad </a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> TheUnexpected </a>
+    </div>
+    <br>
+    <br>
+    <div id="mainBox">
+        <div class="leftColumn">
+            <h2>Hello, hello!</h2>
+            <section>
+                <h3>My First Website</h3>
+                <p>
+                    This is my first real website. I had a lot of difficulties with making
+                    it match up with the landscape in my head. I'm currently learning HTML5,
+                    CSS, and JavaScript along with some web frameworks like Node.js as an
+                    intern at AirSpeed Academy. I hope this website will showcase some of
+                    the skills I've acquired during the summer. This website follows the
+                    recommended standards of Html5.
+                </p>
+            </section>
 
-	    <img src="Me.jpg" alt="A picture of myself" style="width:300px;height:350px;"></img>
-			<section onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" >
-			<h3>About Me</h3>
-	    <p>
-				There is nothing better than a bag of jalapeno chips
-				and a good sci-fi book. Some of my favorite author's include
-				H.G. Wells, Arthur C. Clark, and Phillip K. Dick.
-			</p>
-		</section>
-			<img src="Layla.jpg" alt="A picture of my dog Layla" style="width:300px;height:350px;"></img>
-	  </div>
-	  <div class="rightColumn">
-	    <h2>Miles and Miles and miles of smiles</h2>
-	    <h5>Born December 1st, 1991</h5>
-	   	<img src="TytoonaWalkWay.jpg" alt="A picture of a Cave" style="height:400px;"></img><br>
-	    <p>I'm blue and I'm an ameeeoba and I. like ameoba and ties.</p>
-	    <p>lkjsadfasljfsdklajflkjasdlkfj lkjakfjalfkdjslkfjaskjfklsafkjaslkfj.</p>
-	    <br>
-	  </div>
-	</div>
-<!-- http://html5doctor.com/element-index/#form2 -->
-<!-- https://eloquentjavascript.net/15_event.html -->
-	<div class="footer">
-  <h2>Thanks for looking!</h2>
-	</div>
+            <img src="Me.jpg" alt="A picture of myself" style="width:300px;height:350px;">
+            <section onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)">
+                <h3>About Me</h3>
+                <p>
+                    There is nothing better than a bag of jalapeno chips
+                    and a good sci-fi book. Some of my favorite author's include
+                    H.G. Wells, Arthur C. Clark, and Phillip K. Dick.
+                </p>
+            </section>
+            <img src="Layla.jpg" alt="A picture of my dog Layla" style="width:300px;height:350px;">
+        </div>
+        <div class="rightColumn">
+            <h2>Miles and Miles and miles of smiles</h2>
+            <h5>Born December 1st, 1991</h5>
+            <img src="TytoonaWalkWay.jpg" alt="A picture of a Cave" style="height:400px;"><br>
+            <p>I'm blue and I'm an ameeeoba and I. like ameoba and ties.</p>
+            <p>lkjsadfasljfsdklajflkjasdlkfj lkjakfjalfkdjslkfjaskjfklsafkjaslkfj.</p>
+            <br>
+        </div>
+    </div>
+    <!-- http://html5doctor.com/element-index/#form2 -->
+    <!-- https://eloquentjavascript.net/15_event.html -->
+    <div class="footer">
+        <h2>Thanks for looking!</h2>
+    </div>
 
+
+    <script src="script.js"></script>
+    <script src="js/lib/angular.js"></script>
+    <script src="js/lib/angular-animate.js"></script>
 </body>
-
-<script src="script.js"></script>
 </html>
